--- a/eliza-cl.org
+++ b/eliza-cl.org
@@ -17,6 +17,17 @@
         (and (simple-equal (first x) (first y))
              (simple-equal (rest x) (rest y)))))
 #+END_SRC
+
+** variable-p
+This function brings up two interesting aspects of Common Lisp. The first is that =atom='s are not truely atomic. The second is that predicate syntax in Common Lisp suffers from the same big-language inconsistencies as might be found in PHP.
+#+NAME: variable-p
+#+BEGIN_SRC lisp
+  (defun variable-p (x)
+    "Is x a variable where a variable is a symbol beginning with '?'"
+    (and (symbolp x)
+         (equal (char (symbol-name x) 0)
+                #\?)))
+#+END_SRC
 ** pat-match
 The naive version is so straight forward it could be template code for recursing on a list (or two lists). There is a certain concision to the first part which avoids enumerating all the cases of atoms and lists. Though it arises more from the template style than anything else. 
 *** A naive version
@@ -80,14 +91,7 @@ There are five cases for =pat-match=:
 3. Pattern and input are =eql=.
 4. Pattern and input are both lists.
 5. None of these holds and the match fails.
-#+NAME: pat-match
-#+BEGIN_SRC lisp :noweb tangle
-  <<pat-match-constants>>
-
-  <<binding-utilities>>
-
-  <<match-variable>>
-
+#+BEGIN_SRC lisp
   (defun pat-match (pattern input &optional (bindings non-bindings))
     "Match pattern against input in the context of bindings."
     (cond ((eq bindings fail) fail)
@@ -112,13 +116,77 @@ There are five cases for =pat-match=:
             ((equal input (binding-val binding)) bindings)
             (t fail))))
 #+END_SRC
-
-** variable-p
-This function brings up two interesting aspects of Common Lisp. The first is that =atom='s are not truely atomic. The second is that predicate syntax in Common Lisp suffers from the same big-language inconsistencies as might be found in PHP.
+*** Segment Pattern Matching
+It is useful to have two types of variables, those that match individual input elements and others that behave like Lisp's =&rest= parameter. The latter can be thought of as matching segments. This would allow a syntax such as =(?P need . ?X)=.
 #+BEGIN_SRC lisp
-  (defun variable-p (x)
-    "Is x a variable where a variable is a symbol beginning with '?'"
-    (and (symbolp x)
-         (equal (char (symbol-name x) 0)
-                #\?)))
+  ;;; Example
+  (pat-match '((?* ?p) need (?* ?x))
+             '(Mr Hulot and I need a vaction))
+  ((?P MR HULOT AND I) (?X A VACTION))
+#+END_SRC
+Updating =pat-match= for the new behavior:
+#+BEGIN_SRC lisp :tangle yes
+  (defun pat-match (pattern input &optional (bindings no-bindings))
+    "Match pattern against input in context of the bindings."
+    (cond ((eq bindings fail) fail)
+          ((variable-p pattern)
+           (match-variable pattern input bindings))
+          ((eql pattern input) bindings)
+          ((segment-pattern-p pattern)
+           (segment-match pattern input bindings))
+          ((and (consp pattern) (consp input))
+           (pat-match (rest pattern)
+                      (rest input)
+                      (pat-match (first pattern)
+                                 (first input)
+                                 bindings)))
+          (t fail)))
+
+#+END_SRC
+Adding the new predicate highlights Common Lisp's flexibility in regards to naming symbols by allowing a notation evocative of the kleene star.
+#+NAME: segment-pattern-p
+#+BEGIN_SRC lisp :tangle yes
+  (defun segment-pattern-p (pattern)
+    "Is this a segment matching pattern: ((?* var) . pat)"
+    (and (consp pattern)
+         (starts-with (first-pattern) '?*)))
+#+END_SRC
+The first pass at =segment-match= address the problems that arise when the next element of the pattern is contained in the input but there are intervening elements between what has been matched already and the match for the next element of the pattern. It allows looking further ahead in the input at the expense of requiring a segment-variable to be the last variable in a pattern.
+#+BEGIN_SRC lisp :tangle yes
+  (defun segment-match (pattern input bindings &optional (start 0))
+    "Match the segment patter ((?* var) . pat) against input."
+    (let ((var (second (first pattern)))
+          (pat (rest pattern)))
+      (if (null pat)
+          (match-variable var input bindings)
+          ;; We assume pat starts with a constant
+          ;; In other words, a pattern can't have 2 consectutive vars
+          (let ((pos (position (first pat)
+                               input
+                               :start start
+                               :test #'equal)))
+            (if (null pos)
+                fail
+                (let ((b2 (pat-match (subseq input pos)
+                                     bindings)))
+                  ;; If this match failed try another longer one
+                  ;; If it worked, check that the variables match
+                  (if (eq b2 fail)
+                      (segment-match pattern input bindings (+ 1 pos))
+                      (match-variable var
+                                      (subseq input 0 pos)
+                                      b2))))))))
+#+END_SRC
+
+*** Final
+#+NAME: pat-match
+#+BEGIN_SRC lisp :noweb tangle :tangle yes
+  <<pat-match-constants>>
+
+  <<binding-utilities>>
+
+  <<variable-p>>
+
+  <<match-variable>>
+
 #+END_SRC
