--- a/eliza-cl.org
+++ b/eliza-cl.org
@@ -187,29 +187,30 @@ Adding the new predicate highlights Common Lisp's flexibility in regards to nami
 The first pass at =segment-match= address the problems that arise when the next element of the pattern is contained in the input but there are intervening elements between what has been matched already and the match for the next element of the pattern. It allows looking further ahead in the input at the expense of requiring a segment-variable to be the last variable in a pattern.
 #+NAME:  segment-match
 #+BEGIN_SRC lisp 
-  (defun segment-match (pattern input bindings &optional (start 0))
-    "Match the segment patter ((?* var) . pat) against input."
-    (let ((var (second (first pattern)))
-          (pat (rest pattern)))
-      (if (null pat)
-          (match-variable var input bindings)
-          ;; We assume pat starts with a constant
-          ;; In other words, a pattern can't have 2 consectutive vars
-          (let ((pos (position (first pat)
-                               input
-                               :start start
-                               :test #'equal)))
-            (if (null pos)
-                fail
-                (let ((b2 (pat-match (subseq input pos)
-                                     bindings)))
-                  ;; If this match failed try another longer one
-                  ;; If it worked, check that the variables match
-                  (if (eq b2 fail)
-                      (segment-match pattern input bindings (+ 1 pos))
-                      (match-variable var
-                                      (subseq input 0 pos)
-                                      b2))))))))
+    (defun segment-match (pattern input bindings &optional (start 0))
+      "Match the segment patter ((?* var) . pat) against input."
+      (let ((var (second (first pattern)))
+            (pat (rest pattern)))
+        (if (null pat)
+            (match-variable var input bindings)
+            ;; We assume pat starts with a constant
+            ;; In other words, a pattern can't have 2 consectutive vars
+            (let ((pos (position (first pat)
+                                 input
+                                 :start start
+                                 :test #'equal)))
+              (if (null pos)
+                  fail
+                  (let ((b2 (pat-match pat
+                                       (subseq input pos)
+                                       bindings)))
+                    ;; If this match failed try another longer one
+                    ;; If it worked, check that the variables match
+                    (if (eq b2 fail)
+                        (segment-match pattern input bindings (+ 1 pos))
+                        (match-variable var
+                                        (subseq input 0 pos)
+                                        b2))))))))
 #+END_SRC
 
 *** Final
