still working out packaging for tests

--- a/eliza-cl.test.org
+++ b/eliza-cl.test.org
@@ -31,10 +31,15 @@ This will create a separate package for tests rather than lumping them into the 
 #+BEGIN_SRC lisp :tangle no
   (defpackage :eliza-test
     (:use :common-lisp
+          :asdf
           :eliza
           :lisp-unit))
 
   (in-package :eliza-test)
+
+  (defsystem eliza-test
+      :serial t
+      :components ((:file "eliza.test")))
 #+END_SRC
 * Test One
 #+NAME: lu-test-one
