--- a/eliza-cl.test.org
+++ b/eliza-cl.test.org
@@ -29,17 +29,7 @@ Make sure the system, =lisp-unit= is installed using ASDF.
 This will create a separate package for tests rather than lumping them into the 'parent' package.
 #+NAME: lu-package
 #+BEGIN_SRC lisp :tangle no
-  (defpackage :eliza-test
-    (:use :common-lisp
-          :asdf
-          :eliza
-          :lisp-unit))
-
-  (in-package :eliza-test)
-
-  (defsystem eliza-test
-      :serial t
-      :components ((:file "eliza.test")))
+  (in-package :eliza)
 #+END_SRC
 * Test One
 #+NAME: lu-test-one
